# jackpot

./: .gitignore  CMakeLists.txt  dockerfile
src/: main.cpp  shuffler.cpp  shuffler.hpp  telegram_interface.cpp  telegram_interface.hpp
website/: index.html  style.css
